--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,20 @@ services:
     volumes:
       - .:/app
     command: npm start
+    env_file:
+      - .env
 
   postgres-db:
     image: postgres:latest
     container_name: postgres-db
     restart: always
     environment:
-      POSTGRES_USER: your_username
-      POSTGRES_PASSWORD: your_password
-      POSTGRES_DB: your_database_name
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
       - /path/to/your/postgres/data:/var/lib/postgresql/data
-      
+    env_file:
+      - .env
